minor prod mode bugfix

--- a/src/app/xml-view/array/array.component.html
+++ b/src/app/xml-view/array/array.component.html
@@ -16,7 +16,7 @@
     </ng-container>
 
     <span class="tagname p-1">
-      {{ nodes[0].tagName }}
+      {{ nodes[0].nodeName }}
     </span>
     <span class="py-1">
       ({{ nodes.length }})
