--- a/src/app/xml-view/xml-view.component.html
+++ b/src/app/xml-view/xml-view.component.html
@@ -2,7 +2,5 @@
   {{parserError}}
 </div>
 
-<div *ngFor="let node of document.childNodes">
-  <app-node [node]="node"></app-node>
-</div>
+<app-node [node]="elt"></app-node>
 
