--- a/src/app/xml-view/array/array.component.scss
+++ b/src/app/xml-view/array/array.component.scss
@@ -17,6 +17,11 @@
         border-left: 1px solid #d8d8d8;
         border-top: 1px solid #d8d8d8;
 
+        .array-index {
+            width: 3em;
+            min-width: 3em;
+        }
+
         tr {
 
             th {
