--- a/src/app/xml-view/array/array.component.scss
+++ b/src/app/xml-view/array/array.component.scss
@@ -1,22 +1,41 @@
-.array {
-    border-left: 1px solid #d8d8d8;
-    border-top: 1px solid #d8d8d8;
-    background: white;
+@import '../../colors.scss';
 
+.array {
     .header {
         white-space: nowrap;
     }
 
     .tagname {
-        font-size: 1rem;
-        font-weight: bold;
+      color: $tagname-col;
+    }
+
+    .tag {
+      color: $tag-col;
+    }
+
+    .array-len {
+      color: $attr-val-col;
+    }
+
+    .attr-name {
+      color: $attr-col;
+      white-space: nowrap;
+    }
+
+    .tag-name {
+      color: $tagname-col;
+    }
+
+    .attr-val {
+      color: $attr-val-col;
+    }
+
+    .tag-val {
+      color: $text-col;
     }
 
     table {
-        width: 100%;
-        border-left: 1px solid #d8d8d8;
-        border-top: 1px solid #d8d8d8;
-
+        border: 1px solid $array-col;
         .array-index {
             width: 3em;
             min-width: 3em;
@@ -25,32 +44,23 @@
         tr {
 
             th {
-                border-left: 1px solid #d8d8d8;
-                background: #f8f8f8;
+                border: 1px solid $array-col;
+                background: $array-col;
                 font-weight: normal;
                 white-space: nowrap;
             }
             td {
                 vertical-align: top;
-                border-left: 1px solid #d8d8d8;
+                border: 1px solid $array-col;
                 padding: 0;
-                background: white;
             }
-            
-            th:first-child,
             td:first-child {
-                border-left: 0;
-                text-align: right;
-            }
-
-            td:first-child {
-                border-top: 1px solid #d8d8d8;
-                background: #f8f8f8;
+              color: $tag-col;
             }
 
         }
     }
-    
+
     .btn-sm {
         line-height: 1;
         padding: 0;
@@ -72,19 +82,4 @@
         }
 
     }
-}
-
-
-.icon-attr, .icon-tag {
-    font-size: .9rem;
-    font-weight: bold;
-    width: 1rem;
-    display: inline-block;
-    text-align: right;
-}
-.icon-tag {
-    color: #0095ff;
-}
-.icon-attr {
-    color: #ea7d1f;
 }
