--- a/src/app/xml-view/node/node.component.html
+++ b/src/app/xml-view/node/node.component.html
@@ -5,7 +5,7 @@
   (click)="onNodeClick($event, node)"
   class="node">
 
-  <div class="header d-flex flex-row">
+  <div class="header d-flex flex-row" [class.selected]="selected && !selectedAttr">
     <!-- expand / collapse button -->
     <ng-container *ngIf="!node.isText">
       <button class="btn btn-sm"
@@ -35,6 +35,7 @@
       [hidden]="collapsed"
       *ngFor="let attr of node.attributes">
     <div class="node d-flex flex-row"
+        [class.selected]="selected && selectedAttr === attr"
         (click)="onAttrClick($event, attr, node)">
       <div class="attr-name p-1 indent-node">
         {{ attr.name }} <span class="equals">=</span>
