--- a/src/app/xml-view/node/node.component.html
+++ b/src/app/xml-view/node/node.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="node.name"
+<div *ngIf="node.name" #anchor
   [class.noTagName]="noTagName"
   [class.first-node]="!node.parent"
   [class.text-node]="node.isText"
