--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -3,4 +3,9 @@
 .main {
     background-color: #2d2d2d;
     color: $text-col;
+
+    .search-input {
+        flex-grow: 0;
+        width: 10em;
+    }
 }
