--- a/src/app/selection/selection.component.html
+++ b/src/app/selection/selection.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="selection?.type" class="selection p-3">
+<div *ngIf="selection?.type" class="selection px-1 py-1">
 
   <div class="header">
       <span *ngIf="selection.type === 'Attr'" class="col-tagname">
