--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,85 +2,74 @@
     (dragover)="dragFalse()"
     (dragleave)="dragFalse()"
     (dragend)="dragFalse()"
-    (drop)="onDrop($event)"
->
+    (drop)="onDrop($event)">
 
-    <nav class="nav navbar-dark bg-primary px-2">
+  <nav class="nav navbar-dark bg-primary px-1">
+    <form class="my-1 form-inline navbar-nav">
+      <label class="btn btn-sm btn-primary btn-file" *ngIf="!loading">
+          Open <input type="file" id="open-file" (change)="openFile($event)">
+      </label>
+      <button *ngIf="loading"
+          class="btn btn-sm btn-primary" type="button" disabled>
+          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Loading...
+      </button>
+    </form>
 
-      <form class="my-1 form-inline navbar-nav">
+    <div class="my-1 mr-auto" *ngIf="hasFile()">
+      <button class="btn btn-sm btn-primary" (click)="showSearch(true)">Search</button>
+      <button class="btn btn-sm btn-primary" (click)="expandAll()">Expand all</button>
+      <button class="btn btn-sm btn-primary" (click)="collapseAll()">Collapse all</button>
+    </div>
 
-        <label class="btn btn-sm btn-primary btn-file" *ngIf="!loading">
-            Open <input type="file" id="open-file" (change)="openFile($event)">
-        </label>
+    <div class="my-1">
+      <button class="btn btn-sm btn-primary" placement="auto"
+        [ngbPopover]="aboutContent" popoverTitle="About XmlFly">About</button>
+    </div>
 
-        <button *ngIf="loading"
-            class="btn btn-sm btn-primary" type="button" disabled>
-            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-            Loading...
+    <ng-template #aboutContent>
+      <p>
+        <img width=96 src="assets/icons/128x128.png"/>
+      </p>
+      <p>
+        <a href="https://github.com/mschn/xml-fly" target="_blank">
+          https://github.com/mschn/xml-fly
+        </a>
+      </p>
+    </ng-template>
+  </nav>
+
+  <nav class="nav navbar-dark bg-primary px-1">
+    <div class="mb-1" *ngFor="let file of files">
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button class="btn btn-sm btn-primary text-truncate filename"
+            [class.active]="file.selected"
+            placement="bottom" ngbTooltip="{{ file.name }}"
+            (click)="selectFile(file)">
+            {{ file.name }}
         </button>
-
-      </form>
-
-      <div class="my-1 mr-auto" *ngIf="hasFile()">
-        <button class="btn btn-sm btn-primary" (click)="showSearch(true)">Search</button>
-        <button class="btn btn-sm btn-primary" (click)="expandAll()">Expand all</button>
-        <button class="btn btn-sm btn-primary" (click)="collapseAll()">Collapse all</button>
+        <button type="button"
+            *ngIf="file.selected"
+            (click)="closeFile(file)"
+            [class.active]="file.selected"
+            class="btn btn-sm btn-primary border-left-0">X</button>
       </div>
+    </div>
+  </nav>
 
-      <div class="my-1">
-        <button class="btn btn-sm btn-primary" placement="auto"
-          [ngbPopover]="aboutContent" popoverTitle="About XmlFly">About</button>
+  <div>
+    <app-search></app-search>
+  </div>
+
+  <div>
+    <app-selection></app-selection>
+  </div>
+
+  <div class="border-bottom flex-fill overflow-auto main">
+      <div *ngFor="let file of files" [hidden]="!file.selected">
+          <app-xml-view [file]="file"></app-xml-view>
       </div>
-
-
-      <ng-template #aboutContent>
-        <p>
-          <img width=96 src="assets/icons/128x128.png"/>
-        </p>
-        <p>
-          <a href="https://github.com/mschn/xml-fly" target="_blank">
-            https://github.com/mschn/xml-fly
-          </a>
-        </p>
-      </ng-template>
-
-    </nav>
-
-    <nav class="nav navbar-dark bg-primary px-2">
-      <div class="m-1"
-      *ngFor="let file of files">
-        <div class="btn-group" role="group" aria-label="Basic example">
-
-          <button class="btn btn-sm btn-primary text-truncate filename"
-              [class.active]="file.selected"
-              placement="bottom" ngbTooltip="{{ file.name }}"
-              (click)="selectFile(file)">
-              {{ file.name }}
-          </button>
-
-          <button type="button"
-              *ngIf="file.selected"
-              (click)="closeFile(file)"
-              [class.active]="file.selected"
-              class="btn btn-sm btn-primary border-left-0">X</button>
-        </div>
-      </div>
-    </nav>
-
-    <div>
-      <app-search></app-search>
-    </div>
-
-    <div>
-      <app-selection></app-selection>
-    </div>
-
-    <div class="border-bottom flex-fill overflow-auto main">
-        <div *ngFor="let file of files" [hidden]="!file.selected">
-            <app-xml-view [file]="file"></app-xml-view>
-        </div>
-    </div>
-
+  </div>
 
 </div>
 
